iRedMail-1.3.2:
    * Improvements:
        + [Nginx] Enable http2 support by default.
        + [Roundcube] Enable plugin `zipdownload` by default. It adds an
          option to download all attachments in a message to one zip file,
          when the message has multiple attachments.

    * Fixed issues:
        + [Amavisd] Log matched virus database name.
        - [Fail2ban] Not catch all Roundcube login failures.

    * Updated packages:
        + Roundcube webmail -> 1.4.9
        + netdata -> 1.25.0.
        + uwsgi -> 2.0.19.1. OpenBSD only.
        + mlmmjadmin -> 3.0.4.
        + iRedAPD-4.4.

iRedMail-1.3.1:
    * Fixed issues:
        - Fail2ban match rules were not up to date to match log lines produced
          by the latest Roundcube.
          Thanks Igor Cej for the feedback.

    * Updated packages:
        + Roundcube webmail 1.4.7, with one security fix.
        + netdata -> 1.23.1
        + iRedAPD-4.2, with a critical issue fixed.

iRedMail-1.3:
    * Supports new distribution releases:
        + Ubuntu 20.04. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.
        + OpenBSD 6.7. All backends are supported: MariaDB, PostgreSQL, OpenLDAP.

    * DROPPED distribution release:
        - OpenBSD 6.6. Please use the latest stable release 6.7 instead.

    * Improvements:
        + Enable SOGo for CentOS 8 and Ubuntu 20.04. Thanks to SOGo team.
        + Port scripts `tools/*.py` to Python 3.

    * Fixed issues:
        - Enable TLSv1 on CentOS 7 due to the php package doesn't support TLSv1.2.
        - Fix incorrect permission of Fail2ban log file, should be 0755 so
          that netdata can read banned/unbanned info.
        - Add missing INDEX for SQL column `msgs.time_iso` in `amavisd`
          database.

    * Updated packages:
        + Roundcube webmail -> 1.4.6, it includes few security fixes.
        + iRedAPD -> 4.1. WARNING: Python 3.5+ is required, Python 2 support
          has been completely dropped.