@@ -270,9 +270,10 @@ def ldif_mailuser(domain, username, passwd, cn, quota, groups=''):
                            'smtp', 'smtpsecured', 'smtptls',
                            'pop3', 'pop3secured', 'pop3tls',
                            'imap', 'imapsecured', 'imaptls',
+                           'managesieve', 'managesievesecured', 'managesievetls',
+                           'sieve', 'sievesecured', 'sievetls',
                            'deliver', 'lda', 'forward', 'senderbcc', 'recipientbcc',
-                           'managesieve', 'managesievesecured',
-                           'sieve', 'sievesecured', 'lmtp', 'sogo',
+                           'lmtp', 'sogo',
                            'shadowaddress',
                            'displayedInGlobalAddressBook'],
         'memberOfGroup': groups,
