@@ -4,10 +4,12 @@ iRedMail-1.3.2:
         + [Roundcube] Enable plugin `zipdownload` by default. It adds an
           option to download all attachments in a message to one zip file,
           when the message has multiple attachments.
+        + [Amavisd] Log matched virus database name.
 
     * Fixed issues:
-        + [Amavisd] Log matched virus database name.
         - [Fail2ban] Not catch all Roundcube login failures.
+        - tools/create_mail_user_OpenLDAP.*: missing required ldap attr/value
+          paris: `enabledService=managesievetls` and `enabledService=sievetls`.
 
     * Updated packages:
         + Roundcube webmail -> 1.4.9
